{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 56,
  "lineage": "0275f8f6-218c-d4a5-5e86-e1b696da0135",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08da611f0abeadba6",
            "association_id": "eipassoc-0c3dbc613d12fd739",
            "domain": "vpc",
            "id": "eipalloc-08da611f0abeadba6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0265d6da8b8574922",
            "private_dns": "ip-10-0-0-50.ec2.internal",
            "private_ip": "10.0.0.50",
            "public_dns": "ec2-18-210-101-15.compute-1.amazonaws.com",
            "public_ip": "18.210.101.15",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hannah-ig-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581738732038:internet-gateway/igw-0a2be45b76b01308e",
            "id": "igw-0a2be45b76b01308e",
            "owner_id": "581738732038",
            "vpc_id": "vpc-0acd9ac3e2939afcf"
          },
          "dependencies": [
            "aws_vpc.hannah-vpc-03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "sample_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:581738732038:loadbalancer/app/sample-alb/393b5d55d8509706",
            "arn_suffix": "app/sample-alb/393b5d55d8509706",
            "desync_mitigation_mode": "defensive",
            "dns_name": "sample-alb-823057683.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:581738732038:loadbalancer/app/sample-alb/393b5d55d8509706",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sample-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0542b2ee1f5548db4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d5e02b67ff8e5e36"
              },
              {
                "subnet_id": "subnet-0e628bb06453cb240"
              }
            ],
            "subnets": [
              "subnet-0d5e02b67ff8e5e36",
              "subnet-0e628bb06453cb240"
            ],
            "tags": {
              "Name": "sample-alb"
            },
            "tags_all": {
              "Name": "sample-alb"
            },
            "vpc_id": "vpc-0acd9ac3e2939afcf",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.SG-01",
            "aws_subnet.public-03",
            "aws_subnet.public-04",
            "aws_vpc.hannah-vpc-03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sample_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:581738732038:listener/app/sample-alb/393b5d55d8509706/2b6283392649d1c2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:581738732038:targetgroup/sample-target-group/57fff81d9e92a446",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:581738732038:listener/app/sample-alb/393b5d55d8509706/2b6283392649d1c2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:581738732038:loadbalancer/app/sample-alb/393b5d55d8509706",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.sample_alb",
            "aws_lb_target_group.sample_target_group",
            "aws_security_group.SG-01",
            "aws_subnet.public-03",
            "aws_subnet.public-04",
            "aws_vpc.hannah-vpc-03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sample_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:581738732038:targetgroup/sample-target-group/57fff81d9e92a446",
            "arn_suffix": "targetgroup/sample-target-group/57fff81d9e92a446",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:581738732038:targetgroup/sample-target-group/57fff81d9e92a446",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sample-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0acd9ac3e2939afcf"
          },
          "dependencies": [
            "aws_vpc.hannah-vpc-03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08da611f0abeadba6",
            "association_id": "eipassoc-0c3dbc613d12fd739",
            "connectivity_type": "public",
            "id": "nat-045f4f6912ed7f4b2",
            "network_interface_id": "eni-0265d6da8b8574922",
            "private_ip": "10.0.0.50",
            "public_ip": "18.210.101.15",
            "subnet_id": "subnet-0e628bb06453cb240"
          },
          "dependencies": [
            "aws_eip.eip-03",
            "aws_subnet.public-03",
            "aws_vpc.hannah-vpc-03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/10",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00dd82d2c318169b52184247913",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-045f4f6912ed7f4b2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00dd82d2c318169b5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat-gateway-03",
            "aws_route_table.private-route-table-03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581738732038:route-table/rtb-00dd82d2c318169b5",
            "id": "rtb-00dd82d2c318169b5",
            "owner_id": "581738732038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a2be45b76b01308e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0acd9ac3e2939afcf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hannah-ig-03",
            "aws_vpc.hannah-vpc-03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581738732038:route-table/rtb-0520e190c0f62d449",
            "id": "rtb-0520e190c0f62d449",
            "owner_id": "581738732038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a2be45b76b01308e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0acd9ac3e2939afcf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hannah-ig-03",
            "aws_vpc.hannah-vpc-03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-table-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ffdd76c594721c6",
            "route_table_id": "rtb-00dd82d2c318169b5",
            "subnet_id": "subnet-03d83fdda57b66e0c"
          },
          "dependencies": [
            "aws_internet_gateway.hannah-ig-03",
            "aws_route_table.private-route-table-03",
            "aws_subnet.private-03",
            "aws_vpc.hannah-vpc-03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-table-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0279ec70c028f7b53",
            "route_table_id": "rtb-0520e190c0f62d449",
            "subnet_id": "subnet-0e628bb06453cb240"
          },
          "dependencies": [
            "aws_internet_gateway.hannah-ig-03",
            "aws_route_table.public-route-table-03",
            "aws_subnet.public-03",
            "aws_vpc.hannah-vpc-03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581738732038:security-group/sg-0542b2ee1f5548db4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0542b2ee1f5548db4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230615185234910800000001",
            "name_prefix": "terraform-",
            "owner_id": "581738732038",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-security-group"
            },
            "tags_all": {
              "Name": "alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acd9ac3e2939afcf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hannah-vpc-03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat-sg-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581738732038:security-group/sg-08328eac04fa6f402",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08328eac04fa6f402",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20230520232256997700000001",
            "name_prefix": "terraform-",
            "owner_id": "581738732038",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04bdf7075093e1775"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private-03",
            "aws_vpc.hannah-vpc-03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581738732038:subnet/subnet-03d83fdda57b66e0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d83fdda57b66e0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "581738732038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-03"
            },
            "tags_all": {
              "Name": "private-03"
            },
            "vpc_id": "vpc-0acd9ac3e2939afcf"
          },
          "dependencies": [
            "aws_vpc.hannah-vpc-03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581738732038:subnet/subnet-0d49e909e2e683e60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d49e909e2e683e60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "581738732038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-04"
            },
            "tags_all": {
              "Name": "private-04"
            },
            "vpc_id": "vpc-0acd9ac3e2939afcf"
          },
          "dependencies": [
            "aws_vpc.hannah-vpc-03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581738732038:subnet/subnet-0e628bb06453cb240",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e628bb06453cb240",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "581738732038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-03"
            },
            "tags_all": {
              "Name": "public-03"
            },
            "vpc_id": "vpc-0acd9ac3e2939afcf"
          },
          "dependencies": [
            "aws_vpc.hannah-vpc-03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581738732038:subnet/subnet-0d5e02b67ff8e5e36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5e02b67ff8e5e36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "581738732038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-04"
            },
            "tags_all": {
              "Name": "public-04"
            },
            "vpc_id": "vpc-0acd9ac3e2939afcf"
          },
          "dependencies": [
            "aws_vpc.hannah-vpc-03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hannah-vpc-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581738732038:vpc/vpc-0acd9ac3e2939afcf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03e46578c1933ee85",
            "default_route_table_id": "rtb-02b12cf31476ba35f",
            "default_security_group_id": "sg-0e22f28606932c6f4",
            "dhcp_options_id": "dopt-0fc5e6abe69236935",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0acd9ac3e2939afcf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02b12cf31476ba35f",
            "owner_id": "581738732038",
            "tags": {
              "Name": "hannah-vpc-03"
            },
            "tags_all": {
              "Name": "hannah-vpc-03"
            }
          }
        }
      ]
    }
  ]
}